--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -187,23 +187,41 @@
             })
                 .then((response) => response.json())
                 .then(data => {
-                    console.log("test");
                     console.log(data);
-                    const title = document.getElementById("title");
-                    title.textContent = data.name;
+                    data.foreach(function(d) {
+                        try {
+                            const title = document.getElementById("title");
+                            title.textContent = d.name;
 
-                    const rating = document.getElementById("rating");
-                    rating.textContent = data.rating;
+                            const food = document.getElementById("food");
+                            food.textContent = d.food;
 
-                    const pricing = document.getElementById("pricing");
-                    pricing.textContent = data.price;
+                            const description = document.getElementById("description");
+                            description.textContent = d.description;
 
-                    const image = document.getElementById("image");
-                    image.textContent = data.image_url
+                            const image = document.getElementById("image");
+                            image.src = d.image_url;
 
-                    const address = document.getElementById("address");
-                    address.textContent = data.Location[address1] + data.Location[address2] + data.Location[address3] + data.Location.city + ", " + data.Location.state + data.Location.zip_code;
-                })
+                            const location = document.getElementById("location");
+                            location.textContent = d.location;
+                        } catch (error) {
+                            const title = document.getElementById("title");
+                            title.textContent = d.name;
+
+                            const rating = document.getElementById("rating");
+                            rating.textContent = d.rating;
+
+                            const pricing = document.getElementById("pricing");
+                            pricing.textContent = d.price;
+
+                            const image = document.getElementById("image");
+                            image.src = d.image_url;
+
+                            const address = document.getElementById("address");
+                            address.textContent = d.Location.address1 + d.Location.address2 + d.Location.address3 + d.Location.city + ", " + d.Location.state + d.Location.zip_code;
+                        }
+                    });
+            })
                 .then((json) => console.log(json));
         }
             
