--- a/Frontend/landing.html
+++ b/Frontend/landing.html
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="d-flex container vh-100 align-items-center flex-wrap flex-column justify-content-center" style="max-height: 70vh;">
             <div class="row">
-                <h1 class="col-12 text-center" style="font-size: 100px; font-family: 'Lora', serif; color:#EFF2F1">Anthill</h1>
+                <h1 class="col-12 text-center" style="font-size: 100px; font-family: 'Lora', serif; color:#EFF2F1">AntHill</h1>
             </div>
     
             <div class="row">
